--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# img
+src/assets/img/*.jpg
+
 # compiled output
 /dist
 /tmp
